<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<include layout="@layout/common_toolbar"/>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<Button
				android:id="@+id/status_btn1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="30dp"
				android:layout_marginLeft="30dp"
				android:text="@string/status_bar_light_black"
				android:layout_marginTop="30dp"/>
			<Button
				android:id="@+id/status_btn2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="30dp"
				android:layout_marginLeft="30dp"
				android:text="@string/status_bar_scroll_black"
				android:layout_marginTop="30dp"/>

			<Button
				android:id="@+id/status_btn3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="30dp"
				android:layout_marginLeft="30dp"
				android:text="@string/status_bar_tran_black"
				android:layout_marginTop="30dp"/>

			<Button
				android:id="@+id/status_btn4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginRight="30dp"
				android:layout_marginLeft="30dp"
				android:text="@string/status_bar_tran"
				android:layout_marginTop="30dp"/>
		</LinearLayout>

	</android.support.v4.widget.NestedScrollView>

</LinearLayout>